kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sathvik-workloads
  labels:
    name: sathvik-workloads
    compliance: pci-dss
    security-zone: private-isolated
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
