kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sathvik-payment-service
  namespace: sathvik-workloads
  labels:
    app: sathvik-payment-service
    tier: payment-gateway
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: sathvik-payment-service
